tests/paczka1/small_fuzzy/11956308.err
Error in line 7: 5QMJ S252 53,5
Error in line 12: XObYT6pUL S192 233,8
Error in line 16: 5QMJ A755 1!!,!
